# xpress-images-project

./: .gitignore  CLAUDE.md  PLAN-cross-tab-polling.md  README.md  app.py  doorupdates.md  generator.py  package-lock.json  package.json  pyproject.toml
.claude/agents/: prompt-engineer.md
.plans/review-fixes/: implementation.md  plan.db  progress-report.md
backend/: app.py  coverage.py  filename_parsing.py  generator.py  materials.py  models.py  state.py  worker.py
backend/routers/: coverage.py  projects.py  projects_common.py  projects_crud.py  projects_generation.py  projects_media.py  projects_versions.py  swatches.py
backend/styles/: __init__.py  catalog.py
docs/: codebase-review.md  execution-plan.md
docs/sales/: best-sellers-analysis.md
docs/sales/data/: thermofoil_cabinet_doors.csv  thermofoil_drawer_fronts.csv  wood_cabinet_doors.csv  wood_drawer_fronts.csv
docs/superpowers/plans/: 2026-06-30-coverage-checklist.md
docs/superpowers/specs/: 2026-06-30-codebase-review-design.md  2026-06-30-codebase-review-findings.md  2026-06-30-coverage-checklist-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CoveragePage.tsx  CoverageTable.tsx  DoorLibrary.tsx  GenerateStep.tsx  Layout.tsx  LibraryCard.tsx  (+9 more)
scripts/: remove_watermarks.py
swatches/: rtf_types.json  wood_types.json
tests/: test_api_smoke.py  test_coverage.py  test_filename_parsing.py  test_generator_retry.py  test_materials.py  test_project_store.py  test_worker_concurrency.py
(+2 files in other folders)
