[project]
name = "xpress-images-project"
version = "0.1.0"
description = "Generate cabinet door variations across wood types using Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "carvekit-colab>=4.1.2",
    "google-genai>=1.60.0",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"
