[project]
name = "xpress-images-project"
version = "0.1.0"
description = "Generate cabinet door variations across wood types using Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.60.0",
    "numpy<2.4",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"backend/generator.py" = ["E501"]
"backend/styles/catalog.py" = ["E501"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
